# nbt2yaml

./: .gitignore  .hgignore  CHANGES  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
nbt2yaml/: __init__.py  compat.py  main.py  parse.py  yamlgen.py
scripts/: nbt2yaml  nbtedit  yaml2nbt
tests/: __init__.py  test_dump_nbt.py  test_dump_yaml.py  test_parse.py  test_parse_nbt.py  test_parse_yaml.py  test_yaml.py
tests/files/: bigtest.nbt  bigtest.yml  chunk.nbt  chunk.yml  empty_compound.nbt  empty_compound.yml  intarraytest.nbt  intarraytest.yml  list.nbt  list.yml  longarraytest.nbt  longarraytest.yml  spawner.nbt  spawner.yml  test.yml
