[metadata]
name = nbt2yaml
# version = attr: nbt2yaml.__version__
description = Read and write Minecraft NBT files using Yaml.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = Minecraft
url = https://github.com/zzzeek/nbt2yaml
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
install_requires =
    PyYAML>=5.1
    python-editor>=0.3
zip_safe = False
packages = find:
package_dir =
    =.

[options.entry_points]
console_scripts =
    nbtedit = nbt2yaml.main:nbtedit
    nbt2yaml = nbt2yaml.main:nbt2yaml
    yaml2nbt = nbt2yaml.main:yaml2nbt


[options.packages.find]
exclude =
    tests
    tests.*

[options.exclude_package_data]
'' = tests*


[flake8]
enable-extensions = G
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,docs/*,*egg,build
import-order-style = google
application-import-names = nbt2yaml,tests


[tool:pytest]
addopts= --tb native -v -r fxX  -p no:logging
python_files=tests/*test_*.py
filterwarnings =
    error
